--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_fr_CA.json
@@ -13,6 +13,23 @@
   "pci_projects_project_is_new": "Nouveau",
   "pci_projects_project_documentation": "Documentation",
   "pci_projects_project_community": "Communauté",
+  "pci_projects_project_billing": "Facturation",
+  "pci_projects_project_billing_voucher_credit": "Code promotion : {{ voucher }}",
+  "pci_projects_project_billing_active_credit_balance": "Valide jusqu'au {{ expirationDate }}",
+  "pci_projects_project_documentation_getting_started_term": "Getting Started",
+  "pci_projects_project_documentation_getting_started_description": "L’essentiel pour commencer",
+  "pci_projects_project_documentation_interface_term": "Public Cloud",
+  "pci_projects_project_documentation_interface_description": "Se familiariser",
+  "pci_projects_project_documentation_instances_term": "Instances",
+  "pci_projects_project_documentation_instances_description": "Gérer vos instances",
+  "pci_projects_project_documentation_billing_term": "Facturation",
+  "pci_projects_project_documentation_billing_description": "Comprendre et gérer",
+  "pci_projects_project_documentation_guides_term": "Guides",
+  "pci_projects_project_documentation_guides_description": "Voir tous les guides Public Cloud",
+  "pci_projects_project_community_roadmap_term": "Roadmap",
+  "pci_projects_project_community_roadmap_description": "Découvrez et participez",
+  "pci_projects_project_community_discord_term": "Communauté",
+  "pci_projects_project_community_discord_description": "Discutez sur Discord",
   "pci_projects_project_welcome": "Bienvenue sur la nouvelle interface Public Cloud",
   "pci_projects_project_keystone_upgrade": "Changement important le 23 juin 2020, merci d'anticiper dès maintenant le passage à <strong>Keystone v3</strong>.",
   "pci_projects_project_keystone_upgrade_more": "En savoir plus",
