--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_fr_FR.json
@@ -274,5 +274,11 @@
   "pack_move_promotion_description": "Promotion disponible jusqu'au {{ endDate }}",
   "pack_move_promotion_subscription_months_offered": "{{ duration }} mois offerts",
   "pack_move_promotion_installation_fees_offered": "Frais de mise en service offerts",
-  "pack_move_resume_promotion": "Les frais d'installation et les {{ duration }} premiers mois de votre nouvel abonnement sont offerts (hors location de modem, options supplémentaires ou frais de transport)."
+  "pack_move_resume_promotion": "Les frais d'installation et les {{ duration }} premiers mois de votre nouvel abonnement sont offerts (hors location de modem, options supplémentaires ou frais de transport).",
+  "pack_move_modem_yes": "Modem neuf ({{ price }} HT / mois)",
+  "pack_move_modem_recycled": "Modem recyclé ({{ price }} HT / mois)",
+  "pack_move_modem_no": "Pas de modem",
+  "pack_move_modem_required": "La sélection d'un type de modem est obligatoire",
+  "pack_move_confirm_modem_rental_yes": "Location modem neuf",
+  "pack_move_confirm_modem_rental_recycled": "Location modem recyclé"
 }
