fix(i18n): add missing translations [CDS 2053]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
@@ -748,8 +748,8 @@
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
   "signup_enum_IN_area_IN-WB": "Westbengalen",
   "signup_section_identification": "Ihre Kundenkennung",
-  "signup_section_activity": "Beruf",
-  "signup_section_language": "Angaben zu Sprachen",
+  "signup_section_activity": "Ihr Beruf / Ihre Branche",
+  "signup_section_language": "Konfiguration Ihres Kundencenters",
   "signup_field_required_error": "Bitte füllen Sie dieses Feld aus.",
   "signup_field_pattern_error": "Bitte wählen Sie ein gültiges Format.",
   "signup_enum_managerLanguage_de_DE": "Deutsch",
