--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
@@ -748,8 +748,8 @@
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
   "signup_enum_IN_area_IN-WB": "West Bengal",
   "signup_section_identification": "Your customer ID",
-  "signup_section_activity": "Activity",
-  "signup_section_language": "Language information",
+  "signup_section_activity": "Your activity",
+  "signup_section_language": "OVHcloud Control Panel configuration",
   "signup_field_required_error": "Please fill in this field.",
   "signup_field_pattern_error": "Please enter a valid format.",
   "signup_enum_managerLanguage_de_DE": "German",
