--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_it_IT.json
@@ -748,8 +748,8 @@
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
   "signup_enum_IN_area_IN-WB": "Bengala Occidentale",
   "signup_section_identification": "Il tuo identificativo cliente",
-  "signup_section_activity": "Attività",
-  "signup_section_language": "Preferenze di lingua",
+  "signup_section_activity": "La tua attività",
+  "signup_section_language": "Configurazione del tuo Spazio Cliente",
   "signup_field_required_error": "Completa questo campo",
   "signup_field_pattern_error": "Inserisci un formato valido",
   "signup_enum_managerLanguage_de_DE": "Tedesco",
