--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
@@ -748,8 +748,8 @@
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
   "signup_enum_IN_area_IN-WB": "Bengal Zachodni ",
   "signup_section_identification": "Twój identyfikator klienta",
-  "signup_section_activity": "Aktywność",
-  "signup_section_language": "Informacje o językach",
+  "signup_section_activity": "Twoja działalność",
+  "signup_section_language": "Konfiguracja Panelu klienta",
   "signup_field_required_error": "Wypełnij to pole.",
   "signup_field_pattern_error": "Użyj poprawnego formatu.",
   "signup_enum_managerLanguage_de_DE": "Niemiecki",
