--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pt_PT.json
@@ -748,8 +748,8 @@
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
   "signup_enum_IN_area_IN-WB": "West Bengal",
   "signup_section_identification": "ID de cliente",
-  "signup_section_activity": "Atividade",
-  "signup_section_language": "Informações de línguas",
+  "signup_section_activity": "A sua atividade",
+  "signup_section_language": "Configuração da Área de Cliente",
   "signup_field_required_error": "Preencha o campo.",
   "signup_field_pattern_error": "Introduza um formato válido.",
   "signup_enum_managerLanguage_de_DE": "Alemão",
