--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_pt_PT.json
@@ -17,5 +17,22 @@
   "pci_projects_project_keystone_upgrade": "Uma importante mudança terá lugar a 23 de junho de 2020. Prepare a sua migração para <strong>Keystone v3</strong>.",
   "pci_projects_project_keystone_upgrade_more": "Saber mais",
   "pci_projects_project_quota_warning_message": "Por razões de segurança, o seu projeto foi sujeito a um limite. Se pretender aumentar esta quota, aceda à página <a data-ui-sref=\"{{ quotaUrl }}\">Limites e localizações</a>.",
-  "pci_projects_project_quota_threshold_warning_message": "Os seus níveis de quotas estão a atingir o seu máximo. <a href=\"{{ quotaUrl }}\">Clique aqui para gerir as suas quotas</a>."
+  "pci_projects_project_quota_threshold_warning_message": "Os seus níveis de quotas estão a atingir o seu máximo. <a href=\"{{ quotaUrl }}\">Clique aqui para gerir as suas quotas</a>.",
+  "pci_projects_project_billing": "Faturação",
+  "pci_projects_project_billing_voucher_credit": "Código promocional: {{ voucher }}",
+  "pci_projects_project_billing_active_credit_balance": "Válido até {{ expirationDate }}",
+  "pci_projects_project_documentation_getting_started_term": "Getting Started",
+  "pci_projects_project_documentation_getting_started_description": "O essencial para começar",
+  "pci_projects_project_documentation_interface_term": "Public Cloud",
+  "pci_projects_project_documentation_interface_description": "Conhecer",
+  "pci_projects_project_documentation_instances_term": "Instâncias",
+  "pci_projects_project_documentation_instances_description": "Gerir as suas instâncias",
+  "pci_projects_project_documentation_billing_term": "Faturação",
+  "pci_projects_project_documentation_billing_description": "Compreender e gerir",
+  "pci_projects_project_documentation_guides_term": "Manuais",
+  "pci_projects_project_documentation_guides_description": "Ver todos os manuais Public Cloud",
+  "pci_projects_project_community_roadmap_term": "Roadmap",
+  "pci_projects_project_community_roadmap_description": "Descubra e participe",
+  "pci_projects_project_community_discord_term": "Comunidade",
+  "pci_projects_project_community_discord_description": "Discuta no Discord"
 }
