--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/components/ai-pipeline/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/components/ai-pipeline/translations/Messages_fr_FR.json
@@ -1,11 +1,11 @@
 {
-  "pci_ai_dashboard_pipeline_stock": "1. Stocker",
+  "pci_ai_dashboard_pipeline_stock": "Stocker",
   "pci_ai_dashboard_pipeline_stock_link": "Object Storage",
-  "pci_ai_dashboard_pipeline_explore": "2. Explorer",
+  "pci_ai_dashboard_pipeline_explore": "Explorer",
   "pci_ai_dashboard_pipeline_explore_link": "AI Notebooks",
-  "pci_ai_dashboard_pipeline_train": "3. Entraîner",
+  "pci_ai_dashboard_pipeline_train": "Entraîner",
   "pci_ai_dashboard_pipeline_train_link": "AI Training",
-  "pci_ai_dashboard_pipeline_serve": "4. Déployer",
+  "pci_ai_dashboard_pipeline_serve": "Déployer",
   "pci_ai_dashboard_pipeline_serve_link": "AI Deploy",
   "pci_ai_dashboard_pipeline_running": "{{nbServices}} en service",
   "pci_ai_dashboard_pipeline_stopped": "{{nbServices}} arrêté(s)"
