--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_de_DE.json
@@ -17,5 +17,22 @@
   "pci_projects_project_keystone_upgrade": "Am 23. Juni 2020 findet eine bedeutende Veränderung statt. Daher möchten wir Sie schon jetzt bitten, sich auf den Wechsel zu <strong>Keystone v3</strong> einzustellen.",
   "pci_projects_project_keystone_upgrade_more": "Mehr erfahren",
   "pci_projects_project_quota_warning_message": "Als Sicherheitsmaßnahme wird Ihr Projekt mit einem Höchstwert (Quota) versehen. Wenn Sie dieses Quota erhöhen möchten, gehen Sie bitte auf die Seite <a data-ui-sref=\"{{ quotaUrl }}\">Quotas und Lokalisierung</a>.",
-  "pci_projects_project_quota_threshold_warning_message": "Ihre Quotas nähern sich der Obergrenze. Klicken Sie <a href=\"{{ quotaUrl }}\">hier, um Ihre Quotas zu verwalten</a>."
+  "pci_projects_project_quota_threshold_warning_message": "Ihre Quotas nähern sich der Obergrenze. Klicken Sie <a href=\"{{ quotaUrl }}\">hier, um Ihre Quotas zu verwalten</a>.",
+  "pci_projects_project_billing": "Abrechnung",
+  "pci_projects_project_billing_voucher_credit": "Sonderangebots-Code: {{ voucher }}",
+  "pci_projects_project_billing_active_credit_balance": "Gültig bis zum {{ expirationDate }}",
+  "pci_projects_project_documentation_getting_started_term": "Los geht‘s",
+  "pci_projects_project_documentation_getting_started_description": "Das Wichtigste für den Start",
+  "pci_projects_project_documentation_interface_term": "Public Cloud",
+  "pci_projects_project_documentation_interface_description": "Sich vertraut machen",
+  "pci_projects_project_documentation_instances_term": "Instanzen",
+  "pci_projects_project_documentation_instances_description": "Ihre Instanzen verwalten",
+  "pci_projects_project_documentation_billing_term": "Abrechnung",
+  "pci_projects_project_documentation_billing_description": "Verstehen und verwalten",
+  "pci_projects_project_documentation_guides_term": "Anleitungen",
+  "pci_projects_project_documentation_guides_description": "Alle Anleitungen zu Public Cloud",
+  "pci_projects_project_community_roadmap_term": "Roadmap",
+  "pci_projects_project_community_roadmap_description": "Entdecken und teilnehmen",
+  "pci_projects_project_community_discord_term": "Community",
+  "pci_projects_project_community_discord_description": "Reden Sie mit auf Discord"
 }
