--- a/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_es_ES.json
+++ b/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_es_ES.json
@@ -27,5 +27,7 @@
   "netapp_volumes_snapshots_policies_description": "Puede aplicar una regla de snapshot a su volumen.",
   "netapp_volumes_snapshots_policies_apply": "Aplicar la política",
   "netapp_volumes_snapshots_policies_apply_success": "La regla se ha aplicado correctamente.",
-  "netapp_volumes_snapshots_policies_apply_error": "No se ha podido aplicar la regla. Por favor, vuelva a intentarlo más adelante."
+  "netapp_volumes_snapshots_policies_apply_error": "No se ha podido aplicar la regla. Por favor, vuelva a intentarlo más adelante.",
+  "netapp_volumes_snapshots_type_automatic": "Automática",
+  "netapp_volumes_snapshots_type_system": "Sistema"
 }
