--- a/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_pl_PL.json
@@ -27,5 +27,7 @@
   "netapp_volumes_snapshots_policies_description": "Możesz zastosować regułę snapshota do Twojego wolumenu.",
   "netapp_volumes_snapshots_policies_apply": "Zastosuj politykę",
   "netapp_volumes_snapshots_policies_apply_success": "Reguła została zastosowana.",
-  "netapp_volumes_snapshots_policies_apply_error": "Reguła nie mogła zostać zastosowana. Spróbuj później."
+  "netapp_volumes_snapshots_policies_apply_error": "Reguła nie mogła zostać zastosowana. Spróbuj później.",
+  "netapp_volumes_snapshots_type_automatic": "Automatycznie",
+  "netapp_volumes_snapshots_type_system": "System"
 }
