--- a/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_en_GB.json
+++ b/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_en_GB.json
@@ -27,5 +27,7 @@
   "netapp_volumes_snapshots_policies_description": "You can apply a snapshot policy to your volume.",
   "netapp_volumes_snapshots_policies_apply": "Apply the policy",
   "netapp_volumes_snapshots_policies_apply_success": "Policy applied successfully.",
-  "netapp_volumes_snapshots_policies_apply_error": "The policy could not be applied. Please try again later."
+  "netapp_volumes_snapshots_policies_apply_error": "The policy could not be applied. Please try again later.",
+  "netapp_volumes_snapshots_type_automatic": "Automatic",
+  "netapp_volumes_snapshots_type_system": "System"
 }
