--- a/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/netapp/src/dashboard/volumes/dashboard/snapshots/translations/Messages_pt_PT.json
@@ -27,5 +27,7 @@
   "netapp_volumes_snapshots_policies_description": "Pode aplicar uma regra de snapshot ao seu volume.",
   "netapp_volumes_snapshots_policies_apply": "Aplicar a política",
   "netapp_volumes_snapshots_policies_apply_success": "A regra foi aplicada com sucesso.",
-  "netapp_volumes_snapshots_policies_apply_error": "Não foi possível aplicar a regra. Tente novamente mais tarde."
+  "netapp_volumes_snapshots_policies_apply_error": "Não foi possível aplicar a regra. Tente novamente mais tarde.",
+  "netapp_volumes_snapshots_type_automatic": "Automático",
+  "netapp_volumes_snapshots_type_system": "Sistema"
 }
