fix(i18n): add missing translations [CDS 2060]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_it_IT.json
@@ -28,5 +28,8 @@
   "pci_projects_project_training_jobs_info_title_actions": "Azioni",
   "pci_projects_project_training_job_logs_text_pre_running": "Il job è ancora in attesa di avvio... la scheda si raffredderà automaticamente una volta che il job avrà inizio.",
   "pci_projects_project_training_jobs_resubmit": "Riavvia",
-  "pci_projects_project_training_jobs_ssh_url": "Accesso SSH"
+  "pci_projects_project_training_jobs_ssh_url": "Accesso SSH",
+  "pci_projects_project_training_jobs_privacy": "Privacy",
+  "pci_projects_project_training_jobs_privacy_public": "Accesso pubblico",
+  "pci_projects_project_training_jobs_privacy_restricted": "Accesso limitato"
 }
