--- a/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_de_DE.json
@@ -28,5 +28,8 @@
   "pci_projects_project_training_jobs_info_title_actions": "Aktionen",
   "pci_projects_project_training_job_logs_text_pre_running": "Der Auftrag wurde noch nicht gestartet... Der Tab wird automatisch aktualisiert, sobald der Auftrag gestartet wurde.",
   "pci_projects_project_training_jobs_resubmit": "Neu starten",
-  "pci_projects_project_training_jobs_ssh_url": "SSH Zugang"
+  "pci_projects_project_training_jobs_ssh_url": "SSH Zugang",
+  "pci_projects_project_training_jobs_privacy": "Vertraulichkeit",
+  "pci_projects_project_training_jobs_privacy_public": "Öffentlicher Zugang",
+  "pci_projects_project_training_jobs_privacy_restricted": "Eingeschränkter Zugang"
 }
