--- a/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_en_GB.json
@@ -28,5 +28,8 @@
   "pci_projects_project_training_jobs_info_title_actions": "Actions",
   "pci_projects_project_training_job_logs_text_pre_running": "The job is still waiting to start... The tab will refresh automatically once the job has started.",
   "pci_projects_project_training_jobs_resubmit": "Relaunch",
-  "pci_projects_project_training_jobs_ssh_url": "SSH access"
+  "pci_projects_project_training_jobs_ssh_url": "SSH access",
+  "pci_projects_project_training_jobs_privacy": "Privacy",
+  "pci_projects_project_training_jobs_privacy_public": "Public access",
+  "pci_projects_project_training_jobs_privacy_restricted": "Restricted access"
 }
