--- a/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_pl_PL.json
@@ -28,5 +28,8 @@
   "pci_projects_project_training_jobs_info_title_actions": "Operacje",
   "pci_projects_project_training_job_logs_text_pre_running": "Zadanie oczekuje na uruchomienie... Zakładka odświeży się automatycznie po rozpoczęciu zadania.",
   "pci_projects_project_training_jobs_resubmit": "Uruchom ponownie",
-  "pci_projects_project_training_jobs_ssh_url": "Dostęp SSH"
+  "pci_projects_project_training_jobs_ssh_url": "Dostęp SSH",
+  "pci_projects_project_training_jobs_privacy": "Poufność",
+  "pci_projects_project_training_jobs_privacy_public": "Dostęp publiczny",
+  "pci_projects_project_training_jobs_privacy_restricted": "Ograniczony dostęp"
 }
