--- a/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/info/translations/Messages_pt_PT.json
@@ -28,5 +28,8 @@
   "pci_projects_project_training_jobs_info_title_actions": "Ações",
   "pci_projects_project_training_job_logs_text_pre_running": "O job ainda está a aguardar o arranque... O separador será automaticamente atualizado assim que o job começar.",
   "pci_projects_project_training_jobs_resubmit": "Relançar",
-  "pci_projects_project_training_jobs_ssh_url": "Acesso SSH"
+  "pci_projects_project_training_jobs_ssh_url": "Acesso SSH",
+  "pci_projects_project_training_jobs_privacy": "Confidencialidade",
+  "pci_projects_project_training_jobs_privacy_public": "Acesso público",
+  "pci_projects_project_training_jobs_privacy_restricted": "Acesso restrito"
 }
