--- a/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_de_DE.json
@@ -79,5 +79,11 @@
   "pci_projects_project_training_jobs_submit_select_ssh_add": "Einen neuen öffentlichen SSH-Schlüssel hinzufügen",
   "pci_projects_project_training_jobs_submit_select_ssh_quantity": "{{ numberOfSshKeys }} / {{ maxSshKeys }} SSH-Schlüssel",
   "pci_projects_project_training_jobs_submit_select_ssh_legend": "Öffentlicher SSH-Schlüssel",
-  "pci_projects_project_training_jobs_submit_select_ssh_delete_message": "Den hinzugefügten SSH-Schlüssel löschen"
+  "pci_projects_project_training_jobs_submit_select_ssh_delete_message": "Den hinzugefügten SSH-Schlüssel löschen",
+  "pci_projects_project_training_jobs_submit_select_privacy": "Datenschutzeinstellungen",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_restricted": "Eingeschränkter Zugang",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_restricted_description": "Zugang zu Ihrem Auftrag haben nur Nutzer der Public Cloud von OVHcloud, die in Ihrem Projekt angelegt sind.",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public": "Öffentlicher Zugang",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public_description": "Ihr Auftrag ist allen über Ihre URL zugänglich. Jeder kann auf Ihren Code und die damit verbundenen Daten zugreifen.",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public_warning": "Bitte seien Sie stets vorsichtig beim Umgang mit sensiblen Daten."
 }
