--- a/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_en_GB.json
@@ -79,5 +79,11 @@
   "pci_projects_project_training_jobs_submit_select_ssh_add": "Add a new SSH public key",
   "pci_projects_project_training_jobs_submit_select_ssh_quantity": "{{numberOfSshKeys}}/{{maxSshKeys}} SSH keys",
   "pci_projects_project_training_jobs_submit_select_ssh_legend": "Public SSH key",
-  "pci_projects_project_training_jobs_submit_select_ssh_delete_message": "Delete the attached SSH key"
+  "pci_projects_project_training_jobs_submit_select_ssh_delete_message": "Delete the attached SSH key",
+  "pci_projects_project_training_jobs_submit_select_privacy": "Privacy settings",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_restricted": "Restricted access",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_restricted_description": "Access to your job is reserved for OVHcloud Public Cloud users created in your project.",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public": "Public access",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public_description": "Your job is accessible to everyone via your URL. Anyone can access your code, and the data associated with it.",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public_warning": "Be careful with sensitive data."
 }
