--- a/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_es_ES.json
@@ -79,5 +79,11 @@
   "pci_projects_project_training_jobs_submit_select_ssh_add": "Añadir una nueva clave pública SSH",
   "pci_projects_project_training_jobs_submit_select_ssh_quantity": "{{ numberOfSshKeys }}/{{ maxSshKeys }} clave(s) SSH",
   "pci_projects_project_training_jobs_submit_select_ssh_legend": "Clave pública SSH",
-  "pci_projects_project_training_jobs_submit_select_ssh_delete_message": "Eliminar la clave SSH asociada"
+  "pci_projects_project_training_jobs_submit_select_ssh_delete_message": "Eliminar la clave SSH asociada",
+  "pci_projects_project_training_jobs_submit_select_privacy": "Ajustes de privacidad",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_restricted": "Acceso restringido",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_restricted_description": "Solamente los usuarios de Public Cloud de OVHcloud creados en su proyecto pueden acceder a su job.",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public": "Acceso público",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public_description": "Todos los usuarios pueden acceder a su job a través de su URL. Cualquier usuario puede acceder al código y a los datos asociados.",
+  "pci_projects_project_training_jobs_submit_select_privacy_settings_item_public_warning": "¡Preste especial atención a los datos sensibles!"
 }
