fix(dedicated.account): refactor and add siret module (#8312)
* fix(dedicated.account): refactor and add siret module
ref: MANAGER-9844
Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_de_DE.json
@@ -5,10 +5,10 @@
   "signup_email_in_use": "Für diese E-Mail existiert bereits ein OVHcloud Kundenkonto.",
   "signup_password_invalid": "muss mindestens eine Zahl sowie einen Groß- und einen Kleinbuchstaben enthalten; muss mindestens 8 Zeichen lang sein.",
   "signup_section_account": "Ihr Account",
-  "signup_section_personal": "Persönliche Angaben",
+  "signup_section_personal": "Ihre Angaben zur Person",
   "signup_section_contact": "Ihre Kontaktdaten",
   "signup_section_other": "Zusätzliche Informationen",
-  "signup_field_date_placeholder": "tttt-mm-jj",
+  "signup_field_date_placeholder": "tt/mm/jjjj",
   "signup_field_date_calendar": "Datum auswählen",
   "signup_field_legalform": "Account-Typ",
   "signup_field_country": "Land",
@@ -746,5 +746,18 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "Westbengalen"
+  "signup_enum_IN_area_IN-WB": "Westbengalen",
+  "signup_section_identification": "Ihre Kundenkennung",
+  "signup_section_activity": "Ihr Beruf / Ihre Branche",
+  "signup_section_language": "Konfiguration Ihres Kundencenters",
+  "signup_field_required_error": "Bitte füllen Sie dieses Feld aus.",
+  "signup_field_pattern_error": "Bitte wählen Sie ein gültiges Format.",
+  "signup_enum_managerLanguage_de_DE": "Deutsch",
+  "signup_enum_managerLanguage_en_GB": "Englisch",
+  "signup_enum_managerLanguage_es_ES": "Spanisch",
+  "signup_enum_managerLanguage_fr_FR": "Französisch",
+  "signup_enum_managerLanguage_fr_CA": "Französisch (Kanada)",
+  "signup_enum_managerLanguage_pl_PL": "Polnisch",
+  "signup_enum_managerLanguage_it_IT": "Italienisch",
+  "signup_enum_managerLanguage_pt_PT": "Portugiesisch"
 }
