--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_pl_PL.json
@@ -5,10 +5,10 @@
   "signup_email_in_use": "Ten adres e-mail jest już przypisany do konta klienta w OVHcloud.",
   "signup_password_invalid": "Musi zawierać przynajmniej jedną cyfrę, jedną wielką literę, jedną małą literę. Musi składać się z co najmniej 8 znaków.",
   "signup_section_account": "Twoje konto",
-  "signup_section_personal": "Dane osobowe",
-  "signup_section_contact": "Twoje dane adresowe",
+  "signup_section_personal": "Imię i nazwisko",
+  "signup_section_contact": "Twoje dane kontaktowe",
   "signup_section_other": "Dodatkowe informacje",
-  "signup_field_date_placeholder": "rrrr-mm-dd",
+  "signup_field_date_placeholder": "dd/mm/rrrr",
   "signup_field_date_calendar": "Wybierz datę",
   "signup_field_legalform": "Typ konta",
   "signup_field_country": "Kraj",
@@ -746,5 +746,18 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "Bengal Zachodni "
+  "signup_enum_IN_area_IN-WB": "Bengal Zachodni ",
+  "signup_section_identification": "Twój identyfikator klienta",
+  "signup_section_activity": "Twoja działalność",
+  "signup_section_language": "Konfiguracja Panelu klienta",
+  "signup_field_required_error": "Wypełnij to pole.",
+  "signup_field_pattern_error": "Użyj poprawnego formatu.",
+  "signup_enum_managerLanguage_de_DE": "Niemiecki",
+  "signup_enum_managerLanguage_en_GB": "Angielski",
+  "signup_enum_managerLanguage_es_ES": "Hiszpański",
+  "signup_enum_managerLanguage_fr_FR": "Francuski",
+  "signup_enum_managerLanguage_fr_CA": "Francuski (kanadyjski)",
+  "signup_enum_managerLanguage_pl_PL": "Polski",
+  "signup_enum_managerLanguage_it_IT": "Włoski",
+  "signup_enum_managerLanguage_pt_PT": "Portugalski"
 }
