--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_en_GB.json
@@ -5,10 +5,10 @@
   "signup_email_in_use": "An OVHcloud customer account already exists for this email address. ",
   "signup_password_invalid": "Must contain at least one number, one upper-case letter, and one lower-case letter. Must contain 8 characters or more.",
   "signup_section_account": "Your account",
-  "signup_section_personal": "Personal information",
+  "signup_section_personal": "Your personal details",
   "signup_section_contact": "Your contact details",
   "signup_section_other": "Additional information",
-  "signup_field_date_placeholder": "yyyy-mm-dd",
+  "signup_field_date_placeholder": "dd/mm/yyyy",
   "signup_field_date_calendar": "Choose date",
   "signup_field_legalform": "Account type",
   "signup_field_country": "Country",
@@ -746,5 +746,18 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal"
+  "signup_enum_IN_area_IN-WB": "West Bengal",
+  "signup_section_identification": "Your customer ID",
+  "signup_section_activity": "Your activity",
+  "signup_section_language": "OVHcloud Control Panel configuration",
+  "signup_field_required_error": "Please fill in this field.",
+  "signup_field_pattern_error": "Please enter a valid format.",
+  "signup_enum_managerLanguage_de_DE": "German",
+  "signup_enum_managerLanguage_en_GB": "English",
+  "signup_enum_managerLanguage_es_ES": "Spanish",
+  "signup_enum_managerLanguage_fr_FR": "French",
+  "signup_enum_managerLanguage_fr_CA": "French (Canadian) ",
+  "signup_enum_managerLanguage_pl_PL": "Polish",
+  "signup_enum_managerLanguage_it_IT": "Italian",
+  "signup_enum_managerLanguage_pt_PT": "Portuguese"
 }
