--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_es_ES.json
@@ -17,5 +17,22 @@
   "pci_projects_project_keystone_upgrade": "El 23 de junio de 2020 se produjo un cambio importante. Por favor, planifique su migración a <strong>Keystone v3</strong>.",
   "pci_projects_project_keystone_upgrade_more": "Más información",
   "pci_projects_project_quota_warning_message": "Por motivos de seguridad, su proyecto tiene una cuota asignada. Si desea aumentar esta cuota, acceda a la página <a data-ui-sref=\"{{ quotaUrl }}\">Quota and localization</a>.",
-  "pci_projects_project_quota_threshold_warning_message": "Está a punto de alcanzar el límite máximo de su cuota. <a href=\"{{ quotaUrl }}\">Haga clic aquí para gestionar sus cuotas</a>."
+  "pci_projects_project_quota_threshold_warning_message": "Está a punto de alcanzar el límite máximo de su cuota. <a href=\"{{ quotaUrl }}\">Haga clic aquí para gestionar sus cuotas</a>.",
+  "pci_projects_project_billing": "Facturación",
+  "pci_projects_project_billing_voucher_credit": "Código promocional: {{ voucher }}",
+  "pci_projects_project_billing_active_credit_balance": "Válido hasta el {{ expirationDate }}",
+  "pci_projects_project_documentation_getting_started_term": "Primeros pasos",
+  "pci_projects_project_documentation_getting_started_description": "Lo esencial para empezar a utilizar la solución",
+  "pci_projects_project_documentation_interface_term": "Public Cloud",
+  "pci_projects_project_documentation_interface_description": "Conocer la interfaz",
+  "pci_projects_project_documentation_instances_term": "Instancias",
+  "pci_projects_project_documentation_instances_description": "Gestionar sus instancias",
+  "pci_projects_project_documentation_billing_term": "Facturación",
+  "pci_projects_project_documentation_billing_description": "Entender y gestionar",
+  "pci_projects_project_documentation_guides_term": "Guías",
+  "pci_projects_project_documentation_guides_description": "Ver todas las guías de Public Cloud",
+  "pci_projects_project_community_roadmap_term": "Roadmap",
+  "pci_projects_project_community_roadmap_description": "Descubra y participe",
+  "pci_projects_project_community_discord_term": "Comunidad",
+  "pci_projects_project_community_discord_description": "Participar en Discord"
 }
