--- a/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_pl_PL.json
@@ -1,12 +1,12 @@
 {
-  "ip_components_alerts_load_text_with_service": "Sprawdź, czy w przypadku tej usługi masz ustawione alerty dotyczące adresów IP.",
+  "ip_components_alerts_load_text_with_service": "Sprawdź, czy masz alerty na swoich adresach IP dla tego typu usługi.",
   "ip_components_alerts_load_text": "Sprawdź, czy masz ustawione alerty dotyczące adresów IP.",
   "ip_components_alerts_load_link": "Wyświetl wszystkie moje alerty",
-  "ip_components_alerts_one_alert_with_service": "1 alert dla tej usługi",
-  "ip_components_alerts_many_alerts_with_service": "{} alerty/alertów dla tej usługi",
+  "ip_components_alerts_one_alert_with_service": "1 alert dla tego typu usługi",
+  "ip_components_alerts_many_alerts_with_service": "{} alerty/ów dla tego typu usługi",
   "ip_components_alerts_one_alert": "1 alert",
   "ip_components_alerts_many_alerts": "{} alerty/alertów",
-  "ip_components_alerts_no_alerts_with_service": "Brak alertów dla tej usługi",
+  "ip_components_alerts_no_alerts_with_service": "Brak alertów dla tego typu usługi",
   "ip_components_alerts_no_alerts": "Brak alertów",
   "ip_components_alerts_one_spam_alert": "1 IP zablokowane (Antyspam)",
   "ip_components_alerts_many_spam_alerts": "{} zablokowane/zablokowanych IP (Antyspam)",
