--- a/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_it_IT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_it_IT.json
@@ -1,12 +1,12 @@
 {
-  "ip_components_alerts_load_text_with_service": "Verifica se sono presenti alert sui tuoi IP per questo servizio.",
+  "ip_components_alerts_load_text_with_service": "Verifica se sono presenti alert sui tuoi IP per questo tipo di servizio.",
   "ip_components_alerts_load_text": "Verifica se sono presenti alert sui tuoi IP.",
   "ip_components_alerts_load_link": "Visualizza tutti i tuoi alert",
-  "ip_components_alerts_one_alert_with_service": "1 alert per questo servizio",
-  "ip_components_alerts_many_alerts_with_service": "{} alert per questo servizio",
+  "ip_components_alerts_one_alert_with_service": "1 alert per questo tipo di servizio",
+  "ip_components_alerts_many_alerts_with_service": "{} alert per questo tipo di servizio",
   "ip_components_alerts_one_alert": "1 alert",
   "ip_components_alerts_many_alerts": "{} alert",
-  "ip_components_alerts_no_alerts_with_service": "Nessun alert per questo servizio",
+  "ip_components_alerts_no_alerts_with_service": "Nessun alert per questo tipo di servizio",
   "ip_components_alerts_no_alerts": "Nessun alert",
   "ip_components_alerts_one_spam_alert": "1 IP bloccato (Antispam)",
   "ip_components_alerts_many_spam_alerts": "{} IP bloccati (Antispam)",
