--- a/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/ip/components/alerts/translations/Messages_pt_PT.json
@@ -1,12 +1,12 @@
 {
-  "ip_components_alerts_load_text_with_service": "Verifique se possui alertas sobre os seus IP para este serviço.",
+  "ip_components_alerts_load_text_with_service": "Verifique se possui alertas sobre os seus IP para este tipo de serviço.",
   "ip_components_alerts_load_text": "Verifique se tem alertas sobre os seus IP.",
   "ip_components_alerts_load_link": "Ver todos os meus alertas",
-  "ip_components_alerts_one_alert_with_service": "1 aviso para este serviço",
-  "ip_components_alerts_many_alerts_with_service": "{} avisos para este serviço",
+  "ip_components_alerts_one_alert_with_service": "1 aviso para este tipo de serviço",
+  "ip_components_alerts_many_alerts_with_service": "{} alertas para este tipo de serviço",
   "ip_components_alerts_one_alert": "1 aviso",
   "ip_components_alerts_many_alerts": "{} avisos",
-  "ip_components_alerts_no_alerts_with_service": "Nenhum aviso para este serviço",
+  "ip_components_alerts_no_alerts_with_service": "Nenhum alerta para este tipo de serviço",
   "ip_components_alerts_no_alerts": "Nenhum aviso",
   "ip_components_alerts_one_spam_alert": "1 IP bloqueado (Antispam)",
   "ip_components_alerts_many_spam_alerts": "{} IP bloqueados (Antispam)",
