--- a/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_de_DE.json
@@ -18,7 +18,7 @@
   "cpbc_billing_control_consumption_family_volume": "Block Storage",
   "cpbc_billing_control_consumption_family_ai-training": "AI Training",
   "cpbc_billing_control_consumption_family_instance": "Instanzen",
-  "cpbc_billing_control_consumption_family_loadbalancer": "Loadbalancer",
+  "cpbc_billing_control_consumption_family_loadbalancer": "Kubernetes Load Balancer",
   "cpbc_billing_control_consumption_family_snapshot": "Snapshots",
   "cpbc_billing_control_consumption_family_registry": "Managed Private Registry",
   "cpbc_billing_control_consumption_family_option-managed-kubernetes": "Managed Kubernetes Service",
@@ -41,5 +41,6 @@
   "cpbc_billing_control_consumption_current_period": "Der derzeitige angezeigte Verbrauch wurde für den Zeitraum vom {{ from }} bis zum {{ to }} berechnet.",
   "cpbc_billing_control_consumption_history": "Verlauf",
   "cpbc_billing_control_consumption_family_floatingip": "Floating IP",
-  "cpbc_billing_control_consumption_family_gateway": "Gateway"
+  "cpbc_billing_control_consumption_family_gateway": "Gateway",
+  "cpbc_billing_control_consumption_family_octavia-loadbalancer": "Loadbalancer"
 }
