--- a/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_en_GB.json
@@ -18,7 +18,7 @@
   "cpbc_billing_control_consumption_family_volume": "Block Storage",
   "cpbc_billing_control_consumption_family_ai-training": "AI Training",
   "cpbc_billing_control_consumption_family_instance": "Instances",
-  "cpbc_billing_control_consumption_family_loadbalancer": "Load Balancer",
+  "cpbc_billing_control_consumption_family_loadbalancer": "Kubernetes Load Balancer",
   "cpbc_billing_control_consumption_family_snapshot": "Backups",
   "cpbc_billing_control_consumption_family_registry": "Managed Private Registry",
   "cpbc_billing_control_consumption_family_option-managed-kubernetes": "Managed Kubernetes Service",
@@ -41,5 +41,6 @@
   "cpbc_billing_control_consumption_current_period": "The current resource usage displayed is calculated between {{from}} and {{to}}",
   "cpbc_billing_control_consumption_history": "History",
   "cpbc_billing_control_consumption_family_floatingip": "Floating IP",
-  "cpbc_billing_control_consumption_family_gateway": "Gateway"
+  "cpbc_billing_control_consumption_family_gateway": "Gateway",
+  "cpbc_billing_control_consumption_family_octavia-loadbalancer": "Load Balancer"
 }
