--- a/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_es_ES.json
@@ -18,7 +18,7 @@
   "cpbc_billing_control_consumption_family_volume": "Block Storage",
   "cpbc_billing_control_consumption_family_ai-training": "AI Training",
   "cpbc_billing_control_consumption_family_instance": "Instancias",
-  "cpbc_billing_control_consumption_family_loadbalancer": "Load Balancer",
+  "cpbc_billing_control_consumption_family_loadbalancer": "Kubernetes Load Balancer",
   "cpbc_billing_control_consumption_family_snapshot": "Snapshots",
   "cpbc_billing_control_consumption_family_registry": "Managed Private Registry",
   "cpbc_billing_control_consumption_family_option-managed-kubernetes": "Managed Kubernetes",
@@ -41,5 +41,6 @@
   "cpbc_billing_control_consumption_current_period": "El consumo actual mostrado se calcula entre el {{ from }} y el {{ to }}.",
   "cpbc_billing_control_consumption_history": "Historial",
   "cpbc_billing_control_consumption_family_floatingip": "Floating IP",
-  "cpbc_billing_control_consumption_family_gateway": "Gateway"
+  "cpbc_billing_control_consumption_family_gateway": "Gateway",
+  "cpbc_billing_control_consumption_family_octavia-loadbalancer": "Load Balancer"
 }
