--- a/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_fr_CA.json
@@ -19,7 +19,7 @@
   "cpbc_billing_control_consumption_family_volume": "Block storage",
   "cpbc_billing_control_consumption_family_ai-training": "AI Training",
   "cpbc_billing_control_consumption_family_instance": "Instances",
-  "cpbc_billing_control_consumption_family_loadbalancer": "Load Balancer",
+  "cpbc_billing_control_consumption_family_loadbalancer": "Kubernetes Load Balancer",
   "cpbc_billing_control_consumption_family_snapshot": "Snapshots",
   "cpbc_billing_control_consumption_family_registry": "Managed Private Registry",
   "cpbc_billing_control_consumption_family_option-managed-kubernetes": "Managed Kubernetes Service",
@@ -28,6 +28,7 @@
   "cpbc_billing_control_consumption_family_ai-notebook": "Notebook",
   "cpbc_billing_control_consumption_family_floatingip": "Floating IP",
   "cpbc_billing_control_consumption_family_gateway": "Gateway",
+  "cpbc_billing_control_consumption_family_octavia-loadbalancer": "Load Balancer",
   "cpbc_billing_control_consumption_quantity_hour": "x {{ quantity }} heure(s)",
   "cpbc_billing_control_consumption_quantity_month": "x {{ quantity }} mois",
   "cpbc_billing_control_consumption_quantity_h": "x {{ quantity }} heure(s)",
