--- a/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/billing/translations/Messages_it_IT.json
@@ -18,7 +18,7 @@
   "cpbc_billing_control_consumption_family_volume": "Block Storage",
   "cpbc_billing_control_consumption_family_ai-training": "AI Training",
   "cpbc_billing_control_consumption_family_instance": "Istanze",
-  "cpbc_billing_control_consumption_family_loadbalancer": "Load Balancer",
+  "cpbc_billing_control_consumption_family_loadbalancer": "Load Balancer con Kubernetes",
   "cpbc_billing_control_consumption_family_snapshot": "Snapshot",
   "cpbc_billing_control_consumption_family_registry": "Managed Private Registry",
   "cpbc_billing_control_consumption_family_option-managed-kubernetes": "Managed Kubernetes",
@@ -41,5 +41,6 @@
   "cpbc_billing_control_consumption_current_period": "Il consumo attuale visualizzato è calcolato tra {{ from }} e {{ to }}",
   "cpbc_billing_control_consumption_history": "Storico",
   "cpbc_billing_control_consumption_family_floatingip": "Floating IP",
-  "cpbc_billing_control_consumption_family_gateway": "Gateway"
+  "cpbc_billing_control_consumption_family_gateway": "Gateway",
+  "cpbc_billing_control_consumption_family_octavia-loadbalancer": "Load Balancer"
 }
