--- a/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_en_GB.json
@@ -32,7 +32,7 @@
   "pci_projects_project_training_jobs_submit_select_data_tips_2": "A good practice is to attach a container with your input data, and attach a second container to save the output data in.",
   "pci_projects_project_training_jobs_submit_command_default_select": "Specify the command to run (optional)",
   "pci_projects_project_training_jobs_submit_select_command": "Enter the Docker command to launch in the container (optional)",
-  "pci_projects_project_training_jobs_submit_select_command_tips": "Enter the arguments (separated by spaces) that will be passed to the Docker command",
+  "pci_projects_project_training_jobs_submit_select_command_tips": "Enter the arguments (separated by spaces) that will be passed to the Docker command. Apostrophes (`) are not supported and should be replaced with quotation marks.",
   "pci_projects_project_training_jobs_submit_select_command_tile_title": "Specific command",
   "pci_projects_project_training_jobs_submit_select_command_tile_command": "Arguments",
   "pci_projects_project_training_jobs_access_url_help": "With HTTP access, you can be redirected from your browser to port 80 of the container, if it is still running. To access the web interface, you will need to authenticate.",
