--- a/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_es_ES.json
@@ -32,7 +32,7 @@
   "pci_projects_project_training_jobs_submit_select_data_tips_2": "Una buena práctica consiste en asociar un contenedor con sus datos de entrada y un segundo con los datos de salida.",
   "pci_projects_project_training_jobs_submit_command_default_select": "Especificar el comando que quiere ejecutar (opcional)",
   "pci_projects_project_training_jobs_submit_select_command": "Introducir el comando Docker que quiere ejecutar en el contenedor (opcional)",
-  "pci_projects_project_training_jobs_submit_select_command_tips": "Introducir los argumentos (separados por espacios) que se transferirán al comando Docker",
+  "pci_projects_project_training_jobs_submit_select_command_tips": "Introducir los argumentos (separados por espacios) que se transferirán al comando Docker. Las comillas simples (`) no se admiten y deben sustituirse por comillas dobles.",
   "pci_projects_project_training_jobs_submit_select_command_tile_title": "Pedido específico",
   "pci_projects_project_training_jobs_submit_select_command_tile_command": "Argumentos",
   "pci_projects_project_training_jobs_access_url_help": "El acceso HTTP permite redirigir desde su navegador hacia el puerto 80 del contenedor si este sigue en ejecución. Deberá identificarse para acceder a la interfaz web.",
