--- a/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_it_IT.json
@@ -32,7 +32,7 @@
   "pci_projects_project_training_jobs_submit_select_data_tips_2": "Una buona pratica è di associare un container con i dati di entrata e un secondo nel quale salvare i dati di uscita.",
   "pci_projects_project_training_jobs_submit_command_default_select": "Specifica il comando da eseguire (facoltativo)",
   "pci_projects_project_training_jobs_submit_select_command": "Inserisci il comando Docker da eseguire nel container (facoltativo)",
-  "pci_projects_project_training_jobs_submit_select_command_tips": "Inserisci gli argomenti (separati da spazi) che saranno utilizzati dal comando Docker",
+  "pci_projects_project_training_jobs_submit_select_command_tips": "Inserisci gli argomenti (separati da spazi) che saranno passati al comando Docker. Le virgolette singole (`) non sono supportate e devono essere sostituite da virgolette doppie (“).",
   "pci_projects_project_training_jobs_submit_select_command_tile_title": "Comando specifico",
   "pci_projects_project_training_jobs_submit_select_command_tile_command": "Argomenti",
   "pci_projects_project_training_jobs_access_url_help": "L'accesso HTTP consente il reindirizzamento dal browser alla porta 80 del container, se ancora in esecuzione. Per accedere all'interfaccia Web è necessario identificarsi.",
