--- a/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/training/jobs/translations/Messages_pt_PT.json
@@ -32,7 +32,7 @@
   "pci_projects_project_training_jobs_submit_select_data_tips_2": "Uma boa prática é associar um container com os seus dados de entrada e um segundo no qual pode registar os dados de saída.",
   "pci_projects_project_training_jobs_submit_command_default_select": "Especificar a encomenda a executar (facultativo)",
   "pci_projects_project_training_jobs_submit_select_command": "Introduza o comando Docker a executar no container (facultativo)",
-  "pci_projects_project_training_jobs_submit_select_command_tips": "Introduza os argumentos (separados por espaços) que passarão ao comando Docker",
+  "pci_projects_project_training_jobs_submit_select_command_tips": "Introduza os argumentos (separados por espaços) que passarão ao comando Docker. As aspas simples (`) não são suportadas e devem ser substituídas por aspas.",
   "pci_projects_project_training_jobs_submit_select_command_tile_title": "Comando específico",
   "pci_projects_project_training_jobs_submit_select_command_tile_command": "Argumentos",
   "pci_projects_project_training_jobs_access_url_help": "O acesso HTTP permite que o seu browser seja reencaminhado para a porta 80 do container se este ainda estiver a ser executado. Para aceder à interface web terá de se identificar.",
