fix(i18n): add missing translations [CDS 2066]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_de_DE.json
@@ -47,5 +47,7 @@
   "kube_nodes_common_actions": "Aktionen",
   "kube_nodes_add_nodes": "Nodes hinzufügen",
   "kube_nodes_delete_nodes": "Nodes löschen",
-  "kube_nodes_status_REDEPLOYING": "Anwendung der Änderungen"
+  "kube_nodes_status_REDEPLOYING": "Anwendung der Änderungen",
+  "kube_nodes_status_UPSCALING": "Upscaling",
+  "kube_nodes_status_DOWNSCALING": "Downscaling"
 }
