--- a/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_en_GB.json
@@ -47,5 +47,7 @@
   "kube_nodes_common_actions": "Actions",
   "kube_nodes_add_nodes": "Add nodes",
   "kube_nodes_delete_nodes": "Delete nodes",
-  "kube_nodes_status_REDEPLOYING": "Applying changes"
+  "kube_nodes_status_REDEPLOYING": "Applying changes",
+  "kube_nodes_status_UPSCALING": "Upscaling",
+  "kube_nodes_status_DOWNSCALING": "Downscaling"
 }
