--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_en_GB.json
@@ -17,5 +17,22 @@
   "pci_projects_project_keystone_upgrade": "An important change took place on 23rd June 2020. Please prepare for the upgrade to <strong>Keystone v3</strong>.",
   "pci_projects_project_keystone_upgrade_more": "Find out more",
   "pci_projects_project_quota_warning_message": "As a security measure, your project is subject to a quota. If you want to increase this quota, go to the <a data-ui-sref=\"{{ quotaUrl }}\">Quota and location</a> page.",
-  "pci_projects_project_quota_threshold_warning_message": "Your quota levels are reaching their maximum. <a href=\"{{ quotaUrl }}\">Click here to manage your quota</a>."
+  "pci_projects_project_quota_threshold_warning_message": "Your quota levels are reaching their maximum. <a href=\"{{ quotaUrl }}\">Click here to manage your quota</a>.",
+  "pci_projects_project_billing": "Billing",
+  "pci_projects_project_billing_voucher_credit": "Promotion code: {{ voucher }}",
+  "pci_projects_project_billing_active_credit_balance": "Valid until {{ expirationDate }}",
+  "pci_projects_project_documentation_getting_started_term": "Getting Started",
+  "pci_projects_project_documentation_getting_started_description": "The basics to get started",
+  "pci_projects_project_documentation_interface_term": "Public Cloud",
+  "pci_projects_project_documentation_interface_description": "Becoming familiar with",
+  "pci_projects_project_documentation_instances_term": "Instances",
+  "pci_projects_project_documentation_instances_description": "Manage your instances",
+  "pci_projects_project_documentation_billing_term": "Billing",
+  "pci_projects_project_documentation_billing_description": "Understanding and managing",
+  "pci_projects_project_documentation_guides_term": "Guides",
+  "pci_projects_project_documentation_guides_description": "See all Public Cloud guides",
+  "pci_projects_project_community_roadmap_term": "Roadmap",
+  "pci_projects_project_community_roadmap_description": "Discover and participate",
+  "pci_projects_project_community_discord_term": "Community",
+  "pci_projects_project_community_discord_description": "Talk on Discord"
 }
