--- a/packages/manager/modules/pci/src/projects/new/components/pci-new-project-promotion-banner/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/new/components/pci-new-project-promotion-banner/translations/Messages_pl_PL.json
@@ -1,4 +1,4 @@
 {
-  "pci_project_promotion_banner_title": "Korzystasz z zasilenia {{credit}}",
+  "pci_project_promotion_banner_title": "{{credit}} w prezencie",
   "pci_project_promotion_banner_description": "Bezpłatnie przetestujesz wszystkie nasze usługi Public Cloud, korzystając z zasilenia dostępnego podczas tworzenia projektu. Środki te są ważne przez 30 dni."
 }
