--- a/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/kubernetes/details/node-pool/nodes/translations/Messages_pl_PL.json
@@ -47,5 +47,7 @@
   "kube_nodes_common_actions": "Operacje",
   "kube_nodes_add_nodes": "Dodaj węzły",
   "kube_nodes_delete_nodes": "Usuń węzły",
-  "kube_nodes_status_REDEPLOYING": "Wdrażanie zmian"
+  "kube_nodes_status_REDEPLOYING": "Wdrażanie zmian",
+  "kube_nodes_status_UPSCALING": "Upscaling",
+  "kube_nodes_status_DOWNSCALING": "Przeniesienie"
 }
