--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/general-information/translations/Messages_it_IT.json
@@ -83,5 +83,7 @@
   "pci_databases_general_information_support_level_standard": "Standard",
   "pci_databases_general_information_storage_type_high-speed": "Disco remoto di prima generazione",
   "pci_databases_general_information_storage_type_high-speed-gen2": "Disco remoto di seconda generazione",
-  "pci_databases_general_information_storage_upgrade_link": "Aggiungere storage supplementare"
+  "pci_databases_general_information_storage_upgrade_link": "Aggiungere storage supplementare",
+  "pci_databases_general_information_storage_range_included": "(di cui {{includedStorage}} inclusi)",
+  "pci_databases_general_information_storage_type_local-ssd": "Disco SSD locale"
 }
