--- a/packages/manager/modules/pci/src/projects/project/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/translations/Messages_pl_PL.json
@@ -17,5 +17,22 @@
   "pci_projects_project_keystone_upgrade": "W dniu 23 czerwca 2020 roku nastąpi istotna zmiana, dlatego już teraz prosimy o zaplanowanie działań związanych z aktualizacją Keystone do <strong>Keystone v3</strong>.",
   "pci_projects_project_keystone_upgrade_more": "Dowiedz się więcej",
   "pci_projects_project_quota_warning_message": "Ze względów bezpieczeństwa w odniesieniu do Twojego projektu zastosowany został limit.  Jeśli chcesz zwiększyć ten limit, przejdź do strony <a data-ui-sref=\"{{ quotaUrl }}\">Quota and localization</a>.",
-  "pci_projects_project_quota_threshold_warning_message": "Twoje limity zbliżają się do maksymalnych wartości <a href=\"{{ quotaUrl }}\">kliknij tutaj, aby zarządzać limitami</a>."
+  "pci_projects_project_quota_threshold_warning_message": "Twoje limity zbliżają się do maksymalnych wartości <a href=\"{{ quotaUrl }}\">kliknij tutaj, aby zarządzać limitami</a>.",
+  "pci_projects_project_billing": "Płatności",
+  "pci_projects_project_billing_voucher_credit": "Kod promocyjny: {{voucher}}",
+  "pci_projects_project_billing_active_credit_balance": "Ważny do {{expirationDate}}",
+  "pci_projects_project_documentation_getting_started_term": "Pierwsze kroki",
+  "pci_projects_project_documentation_getting_started_description": "Niezbędne informacje na dobry początek",
+  "pci_projects_project_documentation_interface_term": "Public Cloud",
+  "pci_projects_project_documentation_interface_description": "Jak działa interfejs",
+  "pci_projects_project_documentation_instances_term": "Instancje",
+  "pci_projects_project_documentation_instances_description": "Zarządzanie instancjami",
+  "pci_projects_project_documentation_billing_term": "Płatności",
+  "pci_projects_project_documentation_billing_description": "Istotne informacje i zarządzanie",
+  "pci_projects_project_documentation_guides_term": "Przewodniki",
+  "pci_projects_project_documentation_guides_description": "Sprawdź przewodniki dotyczące Public Cloud",
+  "pci_projects_project_community_roadmap_term": "Roadmapa",
+  "pci_projects_project_community_roadmap_description": "Zapoznaj się i wnieś swój wkład",
+  "pci_projects_project_community_discord_term": "Społeczność",
+  "pci_projects_project_community_discord_description": "Porozmawiaj na Discordzie"
 }
