--- a/packages/manager/modules/sign-up/src/components/siret/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/sign-up/src/components/siret/translations/Messages_pl_PL.json
@@ -21,16 +21,16 @@
   "siret_manual_title": "Dodaj firmę ręcznie:",
   "siret_manual_company_name": "Nazwa firmy",
   "siret_manual_company_legal_form": "Forma prawna",
-  "siret_manual_company_legal_form_EI": "Entrepreneur individuel (EI)",
-  "siret_manual_company_legal_form_EURL": "Entreprise unipersonnelle à responsabilité limitée (EURL)",
-  "siret_manual_company_legal_form_SARL": "Société à responsabilité limitée (SARL)",
-  "siret_manual_company_legal_form_SASU": "Société par actions simplifiée unipersonnelle (SASU)",
-  "siret_manual_company_legal_form_SAS": "Société par actions simplifiée (SAS)",
-  "siret_manual_company_legal_form_SA": "Société anonyme (SA)",
-  "siret_manual_company_legal_form_SNC": "Société en nom collectif (SNC)",
-  "siret_manual_company_legal_form_SCS": "Société en commandite simple (SCS)",
-  "siret_manual_company_legal_form_SCA": "Société en commandite par actions (SCA)",
-  "siret_manual_company_legal_form_SCOP": "Société coopérative de production (Scop)",
+  "siret_manual_company_legal_form_EI": "Przedsiębiorca indywidualny (EI)",
+  "siret_manual_company_legal_form_EURL": "Jednoosobowe przedsiębiorstwo z ograniczoną odpowiedzialnością (EURL)",
+  "siret_manual_company_legal_form_SARL": "Spółka z ograniczoną odpowiedzialnością (SARL)",
+  "siret_manual_company_legal_form_SASU": "Uproszczona jednoosobowa spółka akcyjna (SASU)",
+  "siret_manual_company_legal_form_SAS": "Uproszczona spółka akcyjna (SAS)",
+  "siret_manual_company_legal_form_SA": "Spółka akcyjna (SA)",
+  "siret_manual_company_legal_form_SNC": "Spółka jawna (SNC)",
+  "siret_manual_company_legal_form_SCS": "Spółka komandytowa (SCS)",
+  "siret_manual_company_legal_form_SCA": "Spółka komandytowo-akcyjna (SCA)",
+  "siret_manual_company_legal_form_SCOP": "Spółdzielnia produkcyjna (Scop)",
   "siret_manual_registration_date": "Data rejestracji",
   "siret_manual_registration_date_placeholder": "dd/mm/rrrr",
   "siret_update_search_assistant": "Asystent wyszukiwania"
